--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Jay Himanshu Jha",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hijha/smartthings-node"
+  },
   "devDependencies": {
     "typescript": "^2.6.2"
   },
