--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smartthings-node",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.3",
+  "description": "Node client for Samsung SmartThings API",
   "main": "dist/index.js",
   "types": "dist/indes.d.ts",
   "scripts": {
